--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -10,7 +10,7 @@
     <div class="flex">
         <div class="flex-item">
             <div style="display: block;">
-                <canvas baseChart (chartClick)="chartClicked($event)" [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions" [legend]="lineChartLegend" [chartType]="lineChartType" [plugins]="lineChartPlugins" (chartHover)="chartHovered($event)"></canvas>
+                <canvas baseChart (chartClick)="chartClicked($event)" [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions" [legend]="lineChartLegend" [chartType]="lineChartType" (chartHover)="chartHovered($event)"></canvas>
             </div>
         </div>
         <div class="flex-item">
@@ -22,11 +22,6 @@
                     <td *ngFor="let label of lineChartLabels; let j=index">{{d && d.data[j]}}</td>
                 </tr>
             </table>
-            <button mat-button mat-raised-button color="primary" (click)="randomize()">Randomize</button>
-            <button mat-button mat-raised-button color="primary" (click)="pushOne()">Push</button>
-            <button mat-button mat-raised-button color="primary" (click)="changeColor()">Recolor</button>
-            <button mat-button mat-raised-button color="primary" (click)="hideOne()">Toggle Series B</button>
-            <button mat-button mat-raised-button color="primary" (click)="changeLabel()">Change Label</button>
         </div>
     </div>
 
