--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -30,5 +30,9 @@
         </div>
     </div>
 
+    <button (click)="initDashboard()">Data Dashboard</button>
+    <div *ngFor="let item of dashboard">
+        {{item | json}}
+    </div>
 
 </ion-content>
